<resources>
    <string name="app_name">Calzado</string>
    <string name="compra">COMPRAR</string>
    <string name="sexo">Sexo</string>
    <string name="tipo_zapato">Tipo de zapato</string>
    <string name="marca">Marca</string>
    <string name="calcular">CALCULAR</string>
    <string name="borrar">BORRAR</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="zapatilla">Zapatilla</string>
    <string name="clasico">Clasico</string>
    <string name="nike">Nike</string>
    <string name="adidas">Adidas</string>
    <string name="puma">Puma</string>
    <string name="cantidad">Cantidad</string>
    <string name="total">Total a pagar</string>
    <string name="valor">Valor de unidad</string>
    <string name="error_cantidad">Por favor dijete la cantidad</string>
    <string name="error_zero">No puede comprar zero calzado</string>
    <string name="error_exagerado">Por favor no coloque mas de 9999 productos</string>
    <string-array name="opciones_sexo">
        <item>@string/hombre</item>
        <item>@string/mujer</item>
    </string-array>
    <string-array name="opciones_tipo">
        <item>@string/zapatilla</item>
        <item>@string/clasico</item>
    </string-array>
    <string-array name="opciones_marca">
        <item>@string/nike</item>
        <item>@string/adidas</item>
        <item>@string/puma</item>
    </string-array>
</resources>
